[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/Gun/Gun.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="BulletRayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 100, 0 )

[node name="BulletTrace" type="Line2D" parent="."]
light_mask = 3
material = SubResource( 1 )
width = 2.0
default_color = Color( 0.74902, 0.623529, 0.192157, 1 )

[node name="BulletTraceTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="BulletTraceTimer" to="." method="_on_BulletTraceTimer_timeout"]
